Ajustes em direção e ataque

--- a/MarcusVidal.Robot/MarcusVidal.Robot.csproj
+++ b/MarcusVidal.Robot/MarcusVidal.Robot.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Reference Include="robocode">
-      <HintPath>..\..\..\..\..\..\robocode\libs\robocode.dll</HintPath>
+      <HintPath>..\..\..\robocode\libs\robocode.dll</HintPath>
     </Reference>
   </ItemGroup>
 
